# murmurai

./: .gitignore  AGENTS.md  Makefile  README.md  ai-lock.json  murmurai.spec  pyproject.toml
.agents/hooks/maconfai-update/: check.sh
.agents/skills/release/: SKILL.md
.agents/skills/release/references/: release-section-example.md
.claude/: settings.json
.github/workflows/: release.yml  test.yml
murmurai/: __init__.py  app.py  config.py  fusion.py  hud.py  jargon.py  paster.py  recorder.py  transcriber.py
murmurai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_app_settings_reload.py  test_config.py  test_jargon.py
