[project]
name = "murmurai"
version = "0.1.0"
description = "Push-to-talk voice transcription for macOS"
requires-python = ">=3.9"
dependencies = [
    "pynput>=1.7.6",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "rumps>=0.4.0",
]

[project.scripts]
murmurai = "murmurai.app:main"
